k8s/db-poller-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: db-poller-deployment
  labels:
    name: db-poller-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: db-poller
  template:
    metadata:
      labels:
        app: db-poller
    spec:
      containers:
      - image: db-poller:latest
        name: db-poller
        resources:
          limits:
            cpu: "500m"
            memory: "500Mi"
          requests:
            cpu: "250m"
            memory: "250Mi"
        livenessProbe:
          httpGet:
            path: /api/status/healthz
            port: 6000
          initialDelaySeconds: 90
          timeoutSeconds: 10
        readinessProbe:
          httpGet:
            path: /api/status/readyz
            port: 6000
          initialDelaySeconds: 30
          timeoutSeconds: 10
        ports:
        - containerPort: 6000
          name: db-poller
