k8s/http-backend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: http-deployment
  labels:
    name: http-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: http
  template:
    metadata:
      labels:
        app: http
    spec:
      containers:
      - image: http-backend:latest
        name: http-backend
        resources:
          limits:
            cpu: "500m"
            memory: "1Gi"
          requests:
            cpu: "250m"
            memory: "250Mi"
        livenessProbe:
          httpGet:
            path: /api/status/healthz
            port: 3000
          initialDelaySeconds: 90
          timeoutSeconds: 10
        readinessProbe:
          httpGet:
            path: /api/status/readyz
            port: 3000
          initialDelaySeconds: 30
          timeoutSeconds: 10
        ports:
        - containerPort: 3000
          name: http
