k8s/price-poller-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: price-poller-deployment
  labels:
    name: price-poller-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: price-poller
  template:
    metadata:
      labels:
        app: price-poller
    spec:
      containers:
      - image: price-poller:latest
        imagePullPolicy: IfNotPresent
        name: price-poller
        resources:
          limits:
            cpu: "500m"
            memory: "500Mi"
          requests:
            cpu: "250m"
            memory: "250Mi"
        livenessProbe:
          httpGet:
            path: /api/status/healthz
            port: 5000
          initialDelaySeconds: 90
          timeoutSeconds: 10
        readinessProbe:
          httpGet:
            path: /api/status/readyz
            port: 5000
          initialDelaySeconds: 30
          timeoutSeconds: 10
        ports:
        - containerPort: 5000
          name: price-poller
