k8s/price-poller-service.yml
apiVersion: v1
kind: Service
metadata:
  name: price-poller
spec:
  type: ClusterIP
  selector:
    app: price-poller
  ports:
  - name: price-poller
    port: 80
    targetPort: 5000
