k8s/trading-engine-service.yml
apiVersion: v1
kind: Service
metadata:
  name: trading-engine
spec:
  type: ClusterIP
  selector:
    app: trading
  ports:
  - name: trading-engine
    port: 80
    targetPort: 4000
